NLP TP's/texts/robotics/robotics.stackexchange_0000027869.txt
Q:

contact sensor has no member named contacts

I was following this tutorial , but as i try to build the code i get theis error msg:
/usr/include/boost/asio/detail/impl/socket_ops.ipp:266:5: note:   ‘boost::asio::detail::socket_ops::bind’
 int bind(socket_type s, const socket_addr_type* addr,
     ^
/home/rob/Documents/gazebo_contact_tutorial/ContactPlugin.cc: In member function ‘virtual void gazebo::ContactPlugin::OnUpdate()’:
/home/rob/Documents/gazebo_contact_tutorial/ContactPlugin.cc:43:34: error: ‘class gazebo::sensors::ContactSensor’ has no member named ‘Contacts’
   contacts = this->parentSensor->Contacts();

How can i remove this error?
I am using ros indigo with gazebo 2.2.

Originally posted by hari1234 on Gazebo Answers with karma: 56 on 2016-08-29
Post score: 0

A:

For Gazebo 7+, it should be Contacts() with upper case, instead of lower case.
contacts = this->parentSensor->Contacts();

For previous versions:
contacts = this->parentSensor->GetContacts();

Be sure to check the Gazebo version on the tutorial's top-right corner.

Originally posted by chapulina with karma: 7504 on 2016-08-29
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by hari1234 on 2016-08-29:
yes i have trieed that. First it was like that, but i changed in to lower case, but no use.
Comment by chapulina on 2016-08-29:
But with the correct function you're probably getting a different error message, right?
Comment by hari1234 on 2016-08-29:
no same error: .. has no member named Contacts, i looks at the class ContactSensor reference, i can see that this class has member function called Contacts, but when i try to access it it shows error.
Comment by chapulina on 2016-08-29:
ahh ok, now I see you're using Gazebo 2.2. You should choose the correct Gazebo version on the top right, the function used to be GetContacts()

